blog listing styling

--- a/htdocs/content/themes/davidjames/style.css
+++ b/htdocs/content/themes/davidjames/style.css
@@ -547,6 +547,16 @@ button {
   width: 100%;
 }
 
+.blog-list__content {
+  padding-bottom: 5rem;
+}
+
+.blog-list__content .link--read-more {
+  position: absolute;
+  bottom: 0;
+  left: 1rem;
+}
+
 .blog-list__excerpt {
   margin: 2rem 0;
 }
