--- a/htdocs/content/themes/davidjames/style.css
+++ b/htdocs/content/themes/davidjames/style.css
@@ -131,8 +131,8 @@ body {
 }
 
 a {
-  font-family: 'Open Sans', Arial, sans-serif;
-  font-size: 18px;
+  /*font-family: 'Open Sans', Arial, sans-serif;*/
+  /*font-size: 18px;*/
   color: #3d3d3d;
   text-decoration: none;
 }
@@ -142,6 +142,8 @@ a:hover {
 }
 
 .link--underline {
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 18px;
   padding-bottom: 10px;
   border-bottom: 2px solid white;
   letter-spacing: 1px;
@@ -154,6 +156,8 @@ a:hover {
 }
 
 .link--read-more {
+  font-family: 'Open Sans', Arial, sans-serif;
+  font-size: 18px;
   color: #3d3d3d;
   padding-bottom: .5rem;
   border-bottom: 2px solid #1e1e1e;
